# OS

Linux/Console/: lab.sh
Linux/Console/Dll/: CMakeLists.txt  library.cpp  library.h
Linux/Console/NumLib/: CMakeLists.txt  library.cpp
Linux/Console/Test/: CMakeLists.txt
Linux/Killer/Killer/: main.cpp
Linux/Killer/USER/: CMakeLists.txt  main.cpp
Linux/Lab1/NumLib/: library.h
Linux/Lab1/Test/: main.cpp
Linux/PipeLine_/PipeLine/: CMakeLists.txt  main.cpp
Linux/PipeLine_/ProcA/: CMakeLists.txt  main.cpp
Linux/PipeLine_/ProcM/: CMakeLists.txt  main.cpp
Linux/PipeLine_/ProcP/: CMakeLists.txt  main.cpp
Linux/PipeLine_/ProcS/: CMakeLists.txt  main.cpp
Threads/BufferChannel/: Source.cpp
Threads/MAtrix/: MAtrix.sln
Threads/MAtrix/MAtrix/: MAtrix.cpp  MAtrix.vcxproj  MAtrix.vcxproj.filters
Threads/Matrix(windws.h)/Thread_lab/Thread_lab/: Thread_lab.cpp  Thread_lab.vcxproj  Thread_lab.vcxproj.filters
Threads/Matrix+Buffer/: Thread_lab.sln
Threads/Matrix+Buffer/Thread_lab/: BufferedChannel.h  Thread_lab.cpp
Threads/Thread_lab/Thread_lab/: Thread_lab.cpp  Thread_lab.vcxproj  Thread_lab.vcxproj.filters
Windows/Killer/ProcessKiller/: ProcessKiller.sln
Windows/Killer/USER/: USER.sln
Windows/Killer/USER/USER/: USER.cpp  (+2 more)
Windows/Lab1/DllVector/: DllVector.sln
Windows/Lab1/LIB_Test/: LIB_Test.sln
Windows/Lab1/StaticNumber/: StaticNumber.sln
Windows/PipeLine/PipeLine/: PipeLine.sln
Windows/PipeLine/ProcA/: ProcA.sln
Windows/PipeLine/ProcM/: ProcM.sln
Windows/PipeLine/ProcessP/: ProcessP.sln
Windows/PipeLine/ProcessS/: ProcessS.sln
(+95 files in other folders)
